04_Teste/exercicios_gerados/question_mdp_29_variavel/version_1/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 3
    2m = 2 * m
     ^
SyntaxError: invalid syntax